--- a/1-object.html
+++ b/1-object.html
@@ -6,6 +6,11 @@
     <title>Object - Class</title>
   </head>
   <body>
-    <script></script>
+    <script>
+      // oop sebelum ecmascript 6 adalah menggunakan constructor function, contoh
+      function Person() {}
+
+      function NamePerson() {}
+    </script>
   </body>
 </html>
