--- a/1-object.html
+++ b/1-object.html
@@ -11,6 +11,13 @@
       function Person() {}
 
       function NamePerson() {}
+
+      const eko = new Person();
+      const budi = new Person();
+      const iskandar = new NamaPerson();
+
+      // bukan lagi seperti dibawah ini
+      // const eko = {}
     </script>
   </body>
 </html>
