--- a/1-object.html
+++ b/1-object.html
@@ -9,9 +9,9 @@
     <script>
       // oop sebelum ecmascript 6 adalah menggunakan constructor function, contoh
       // property di constructor function
-      function Person() {
-        this.firstName = "";
-        this.lastName = "";
+      function Person(firstName, lastName) {
+        this.firstName = firstName;
+        this.lastName = lastName;
         this.sayHi = function (name) {
           console.info(`Hai ${name}!, Namaku ${this.firstName}`);
         };
@@ -20,13 +20,13 @@
       // diawali dengan huruf besar
       function NewPerson() {}
 
-      const eko = new Person();
-      eko.firstName = "Muhammad";
-      eko.lastName = "Eko";
+      const eko = new Person("Muhammad", "Eko");
+      // eko.firstName = "Muhammad";
+      // eko.lastName = "Eko";
       eko.sayHi("Raka");
 
-      const budi = new Person();
-      budi.firstName = "Budi";
+      const budi = new Person("Budi", "Yanto");
+      // budi.firstName = "Budi";
       budi.sayHi("Joko");
 
       console.log(eko);
