--- a/20-error-handling.html
+++ b/20-error-handling.html
@@ -35,6 +35,26 @@
 
       // program selanjutnya tetap akan di eksekusi meskipun ada yang error sebelumnya
       console.info("Ini pasti di eksekusi!");
+
+      // membuat try finally
+      class Counter {
+        #counter = 1;
+
+        next() {
+          try {
+            return this.#counter;
+          } finally {
+            this.#counter++;
+          }
+        }
+      }
+
+      const counter = new Counter();
+      console.info(counter.next());
+      console.info(counter.next());
+      console.info(counter.next());
+      console.info(counter.next());
+      console.info(counter.next());
     </script>
   </body>
 </html>
